@@ -1,8 +1,5 @@
 #include "config.h"
 
-#include <SPIFFS.h>
-#include <FS.h>
-#include <string.h>
 #include <LilyGoWatch.h>
 
 #include "RunAfterCompilation.h"
@@ -10,6 +7,7 @@
 
 #include "timestamp.h"
 #include "BuildDateTime.h"
+#include "Core/Registry.h"
 
 bool RunAfterCompilation::handle() {
 	RunAfterCompilation *handler = new RunAfterCompilation();
@@ -23,20 +21,13 @@ bool RunAfterCompilation::handle() {
 
 bool RunAfterCompilation::isFirstRun() {
 	if (
-		!SPIFFS.exists(this->buildTimestampFile)
+		 Registry::getInstance()->getValue(REGISTRY_BUILD_TIMESTAMP, 0) == compilationTimestamp
 	) {
+		return false;
+	} else {
 		this->markFirstRunIsOver();
 		return true;
-	} else {
-		fs::File file = SPIFFS.open(this->buildTimestampFile, FILE_READ);
-		String fromFile = file.readString();
-		file.close();
-		if (fromFile == compilationTimestampStr) {
-			return false;
-		}
 	}
-	this->markFirstRunIsOver();
-	return true;
 }
 
 void RunAfterCompilation::afterFirstRunOperations() {
@@ -45,7 +36,5 @@ void RunAfterCompilation::afterFirstRunOperations() {
 }
 
 void RunAfterCompilation::markFirstRunIsOver() {
-	fs::File file = SPIFFS.open(this->buildTimestampFile, FILE_WRITE);
-	file.print(compilationTimestampChar);
-	file.close();
+	Registry::getInstance()->setValue(REGISTRY_BUILD_TIMESTAMP, compilationTimestamp);
 }
